# faulty-server-poller

./: .env  Cargo.toml  README.md  problem.md
configuration/: default.yaml  development.yaml
migrations/: 20210309004256_init_polling_tables.sql
scripts/: init_db.sh
scripts/postgres_init_db_scripts/: init_db.sql
src/: lib.rs  main.rs
src/configuration/: environment.rs  get_settings.rs  mod.rs  settings.rs
src/health_check/: controller.rs
src/polling/: controller.rs  dto.rs  errors.rs  mod.rs  ports.rs
src/polling/background_job_runner/: mod.rs  tokio_background_job_runner.rs
src/polling/polling_service/: mod.rs  polling_service_impl.rs
src/polling/request_sender/: mod.rs  reqwest_request_sender.rs
src/polling/run_repository/: mod.rs  postgres_run_repository.rs
