[package]
name = "faulty-server-poller"
version = "0.1.0"
authors = ["Alexander Prokudin <prok20@inbox.ru>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "faulty-server-poller"

[dependencies]
actix-web = "4.0.0-beta.3"
anyhow = "1.0.38"
async-channel = "1.6.1"
async-trait = "0.1.42"
config = { version = "0.10.1", features = ["yaml"] }
futures = "0.3.13"
reqwest = { version = "0.11.1", features = ["json", "rustls-tls"] }
serde = "1.0.124"
serde-aux = "2.1.1"
sqlx = { version = "0.5.1", features = ["runtime-actix-rustls", "macros", "postgres", "uuid"] }
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2.1.0"
httpmock = "0.5.5"
mockall = "0.9.1"
